Bug 238737 - [PATCH] typo in TagDialog prevents receiving list of labels
Summary: [PATCH] typo in TagDialog prevents receiving list of labels
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Metadata Editing and Reading (show other bugs)
Version: 2.3.0.90
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-24 22:04 UTC by Daniel Faust
Modified: 2010-05-28 23:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 2.3.2


Attachments
fix typo (910 bytes, patch)
2010-05-24 22:04 UTC, Daniel Faust
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Faust 2010-05-24 22:04:42 UTC
Created attachment 43858 [details]
fix typo

Version:           2.3.0.90 (using KDE 4.3.5) 
OS:                Linux

a typo in TagDialog prevents receiving list of labels

Reproducible: Always
Comment 1 Myriam Schweingruber 2010-05-25 10:45:01 UTC
Please make a merge request on http://gitorious.org/amarok/amarok/merge_requests. Also please make sure you use the latest KDE SC and the latest git master to test your patches.
Comment 2 Sven Krohlas 2010-05-28 23:24:58 UTC
commit a40120f9bb84fe515800c846d03775e5da249c15
Author: Sven Krohlas <sven@asbest-online.de>
Date:   Fri May 28 23:04:03 2010 +0200

    Correctly load the list of labels in tag dialog.
    Patch by Daniel Faust <hessijames@gmail.com>.
    
    BUG: 238737
    CCMAIL: hessijames@gmail.com

diff --git a/ChangeLog b/ChangeLog
index e519575..1b2403d 100644
--- a/ChangeLog
+++ b/ChangeLog
@@ -8,8 +8,11 @@ VERSION 2.3.2-Beta 1
 
   CHANGES:
     * Ignore "DJ" prefix when sorting in collection browser. (BR 181955)
+      Patch by Richard Longland <rlongland@hotmail.com>.
 
   BUGFIXES:
+    * Correctly load the list of labels in tag dialog. (BR 238737)
+      Patch by Daniel Faust <hessijames@gmail.com>.
     * Cover manager: fixed crash if closed shortly after opening. (BR 235796)
     * Fixed Last.fm service browser not updating its view if it's open on
       startup. (BR 231044)
diff --git a/src/dialogs/TagDialog.cpp b/src/dialogs/TagDialog.cpp
index 7709ed8..68fc5e3 100644
--- a/src/dialogs/TagDialog.cpp
+++ b/src/dialogs/TagDialog.cpp
@@ -823,7 +823,7 @@ TagDialog::startDataQuery()
     connect( mqm, SIGNAL( newResultReady( QString, Meta::AlbumList ) ), SLOT( resultReady( QString, Meta::AlbumList ) ), Qt::QueuedConnection );
     connect( mqm, SIGNAL( newResultReady( QString, Meta::ComposerList ) ), SLOT( resultReady( QString, Meta::ComposerList ) ), Qt::QueuedConnection );
     connect( mqm, SIGNAL( newResultReady( QString, Meta::GenreList ) ), SLOT( resultReady( QString, Meta::GenreList ) ), Qt::QueuedConnection );
-    connect( mqm, SIGNAL( newResultReady( QString, Meta::LabelList ) ), SLOT( resultReady( QString; Meta::LabelList ) ), Qt::DirectConnection );
+    connect( mqm, SIGNAL( newResultReady( QString, Meta::LabelList ) ), SLOT( resultReady( QString, Meta::LabelList ) ), Qt::DirectConnection );
 
     mqm->setAutoDelete( true );