Correctly load the list of labels in tag dialog. Patch by Daniel Faust <hessijames@gmail.com>.

BUG: 238737
CCMAIL: hessijames@gmail.com